chart/templates/eco-stream.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-stream
  labels:
    app: eco-stream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eco-stream
  template:
    metadata:
      labels:
        app: eco-stream
    spec:
      containers:
      - name: eco-stream
        image: ghcr.io/danmcfan/eco-stream:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eco-stream
spec:
  selector:
    app: eco-stream
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
