chart/templates/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/pgdata
          name: localvolume
      nodeSelector:
        kubernetes.io/hostname: lke154461-226101-26e661250000
      volumes:
      - name: localvolume
        hostPath:
          path: /mnt/postgres/data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: LoadBalancer
