chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eco-stream
spec:
  selector:
    app: eco-stream
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
