chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eco-stream-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - api.eco-stream.danny-obrien.com
    - ui.eco-stream.danny-obrien.com
    secretName: eco-stream-tls
  rules:
  - host: api.eco-stream.danny-obrien.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port:
              number: 80
  - host: ui.eco-stream.danny-obrien.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ui
            port:
              number: 80
